force-app/main/default/objects/IDM_IntegrationError__c/IDM_IntegrationError__c.object-meta.xml
<CustomObject>
    <description>NPN IDM: It captures any exceptions raised from the Batch Job or Adhoc code</description>
    <label>IDM IntegrationError</label>
    <nameField>
        <displayFormat>IDMIntError-{00000}</displayFormat>
        <label>IDM IntegrationError Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDM IntegrationErrors</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>