force-app/main/default/objects/IDM_IntegrationError__c/fields/Error_Source__c.field-meta.xml
<CustomField>
    <fullName>Error_Source__c</fullName>
    <description>IDM: Source of error (Batch job, Trigger class, Button Click class)</description>
    <label>Error Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>