force-app/main/default/objects/IDM_IntegrationError__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IDM integration erred while invoked for this user</description>
    <inlineHelpText>IDM integration erred while invoked for this user</inlineHelpText>
    <label>UserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IDM_SFDCUserUpdate_IntegrationErr_del</relationshipName>
    <type>Lookup</type>
</CustomField>